# looplink

./: README.md  TECH_NOTES.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  campaigns.db  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/app/application/: interfaces.py
backend/app/application/dto/: requests.py  responses.py
backend/app/application/use_cases/: __init__.py  create_campaign.py  end_campaign.py  enroll_shopper.py  generate_distribution.py  launch_campaign.py  manage_offers.py  schedule_campaign.py  update_campaign.py
backend/app/application/validators/: __init__.py  campaign_validators.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: __init__.py  campaign.py  enrollment.py  offer.py
backend/app/domain/enums/: __init__.py  campaign_status.py  identity_type.py  offer_type.py
backend/app/domain/factories/: __init__.py  campaign_factory.py  offer_factory.py
backend/app/domain/interfaces/: __init__.py  repositories.py  unit_of_work.py
backend/app/domain/states/: __init__.py  campaign_state.py  draft_state.py  ended_state.py  live_state.py  scheduled_state.py
backend/app/domain/value_objects/: __init__.py  campaign_token.py  identity.py
backend/app/infrastructure/database/: __init__.py  alembic_imports.py  models.py  session.py
backend/app/presentation/: app.py
backend/tests/: test_docker_e2e.py
backend/tests/test_domain/: test_campaign_entity.py  test_campaign_states.py  test_enrollment_normalization.py  test_offer_factory.py
frontend/: Dockerfile  index.html  (+3 more)
(+51 files in other folders)
